# CMake_Catch2_template

./: CMakeLists.txt  README.md
src/: main.cpp
